hello-app-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-minikube-loadbalancer
  labels:
    app: hello-app-minikube
spec:
  selector:
      app: hello-app-minikube
  ports:
  - port: 8080
    targetPort: 8080
  type: LoadBalancer
