hello-app-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-minikube-nodeport
spec:
  selector:
      app: hello-app-minikube     
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
